Changed uppercase S to lowercase s
Signed-off-by: Stephanie Chong <168800785+Steph-Chong@users.noreply.github.com>

--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Bias measures how well the mean forecast and mean observation correspond to each other. It can tell us whether there is an over or under-forecast tendency and informs how a forecast system could be easily recalibrated.\n",
     "\n",
-    "`Scores` has multiplicative bias, additive bias and percent bias implementations for use on continuous forecasts.\n",
+    "`scores` has multiplicative bias, additive bias and percent bias implementations for use on continuous forecasts.\n",
     "\n",
     "Additive bias is often called the \"mean error\". Since it does not tell us the average *magnitude* (i.e. average of the absolute value of the error) of the error, it is possible for there to be little or no bias even when there are large positive and negative errors.\n",
     "\n",
