--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Additive Bias and Multiplicative Bias"
+    "# Additive Bias, Multiplicative Bias and Percent Bias"
    ]
   },
   {
