Update the tutorial gallery to mention Percent Bias

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -49,7 +49,7 @@
     ]
    },
    "source": [
-    "- [Additive Bias and Multiplicative Bias](./Additive_and_multiplicative_bias.ipynb)\n",
+    "- [Additive Bias, Multiplicative Bias and Percent Bias](./Additive_and_multiplicative_bias.ipynb)\n",
     "- [MAE](./Mean_Absolute_Error.ipynb)\n",
     "- [RMSE](./Root_Mean_Squared_Error.ipynb)\n",
     "- [MSE](./Mean_Squared_Error.ipynb)\n",
