firm can now take a list of xr.datarrays for the thresholds

--- a/tutorials/FIRM.ipynb
+++ b/tutorials/FIRM.ipynb
@@ -93,17 +93,15 @@
     "# Create observations for 100 dates\n",
     "obs = 50 * np.random.random((100, 100))\n",
     "obs = xr.DataArray(\n",
-    "    data=obs, \n",
-    "    dims=[\"time\", \"x\"],\n",
-    "    coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-04-10\"), \"x\": np.arange(0, 100)}\n",
+    "    data=obs, dims=[\"time\", \"x\"], coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-04-10\"), \"x\": np.arange(0, 100)}\n",
     ")\n",
     "\n",
     "# Create forecasts for 7 lead days\n",
-    "fcst = xr.DataArray(data=[1]*7, dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})\n",
+    "fcst = xr.DataArray(data=[1] * 7, dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})\n",
     "fcst = fcst * obs\n",
     "\n",
-    "# Create two forecasts. Forecast A has no bias compared to the observations, but \n",
-    "# Forecast B is biased upwards to align better with forecast directive of forecast \n",
+    "# Create two forecasts. Forecast A has no bias compared to the observations, but\n",
+    "# Forecast B is biased upwards to align better with forecast directive of forecast\n",
     "# the highest category that has at least a 30% chance of occuring\n",
     "noise = 4 * norm.rvs(size=(7, 100, 100))\n",
     "fcst_a = fcst + noise\n",
@@ -938,6 +936,7 @@
    "metadata": {},
    "source": [
     "## Further extensions\n",
+    "- Instead of passing in a list of floats for the threshold arg, pass in a list of xr.DataArrays where the thresholds vary spatially and are based on climatological values \n",
     "- Test the impact of varying the risk threshold\n",
     "- Solve for the optimal way to bias the forecasts to optimize the verification score\n",
     "- Test the impact of the discount distance parameter\n",
