Updates to use https links in references and other doc adjustments

--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -1003,7 +1003,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References\n",
+    "## Further Reading\n",
     "\n",
     "Additive Bias (Mean Error)\n",
     "\n",
@@ -1016,7 +1016,7 @@
     "Percent Bias\n",
     "\n",
     "- Sorooshian, S., Duan, Q., & Gupta, V. K. (1993). Calibration of rainfall-runoff models: Application of global optimization to the Sacramento Soil Moisture Accounting Model. *Water Resources Research, 29*(4), 1185-1194. https://doi.org/10.1029/92WR02617\n",
-    "- Alfieri, L., Pappenberger, F., Wetterhall, F., Haiden, T., Richardson, D., & Salamon, P. (2014). Evaluation of ensemble streamflow predictions in Europe. *Journal of Hydrology, 517*, 913-922. http://doi.org/10.1016/j.jhydrol.2014.06.035\n",
+    "- Alfieri, L., Pappenberger, F., Wetterhall, F., Haiden, T., Richardson, D., & Salamon, P. (2014). Evaluation of ensemble streamflow predictions in Europe. *Journal of Hydrology, 517*, 913-922. https://doi.org/10.1016/j.jhydrol.2014.06.035\n",
     "-   Dawson, C. W., Abrahart, R. J., & See, L. M. (2007). HydroTest: A web-based toolbox of evaluation metrics for the standardised assessment of hydrological forecasts. *Environmental Modelling and Software, 22*(7), 1034-1052. https://doi.org/10.1016/j.envsoft.2006.06.008\n",
     "-   Moriasi, D. N., Arnold, J. G., Van Liew, M. W., Bingner, R. L., Harmel, R. D., & Veith, T. L. (2007). Model evaluation guidelines for systematic quantification of accuracy in watershed simulations. *Transactions of the ASABE, 50*(3), 885-900. https://doi.org/10.13031/2013.23153"
    ]
