Fixes to the kge docstring for sphinx rendering Added KGE notebook to tutorial gallery, and adjusted capitalisation

--- a/tutorials/Kling_Gupta_Efficiency.ipynb
+++ b/tutorials/Kling_Gupta_Efficiency.ipynb
@@ -5,7 +5,7 @@
    "id": "0950f056",
    "metadata": {},
    "source": [
-    "# Kling–Gupta efficiency (KGE)\n",
+    "# Kling–Gupta Efficiency (KGE)\n",
     "In this notebook, we will explore the Kling-Gupta Efficiency (KGE) which is widely used to evaluate the performance of hydrological models. KGE is a performance metric that decomposes the error into three components:\n",
     "correlation,  variability and bias.\n",
     "\n",
