updates after review #700 Add KGE Score

--- a/tutorials/Kling_Gupta_Efficiency.ipynb
+++ b/tutorials/Kling_Gupta_Efficiency.ipynb
@@ -16,10 +16,6 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\rho = \\frac{\\text{cov}(x, y)}{\\sigma_x \\sigma_y}\n",
-    "$$\n",
-    "\n",
-    "$$\n",
     "\\alpha = \\frac{\\sigma_x}{\\sigma_y}\n",
     "$$\n",
     "\n",
@@ -29,7 +25,7 @@
     "\n",
     "where\n",
     "\n",
-    "- $\\rho$ : Linear correlation between observed and forecast values.\n",
+    "- $\\rho$ : Linear correlation between observed and forecast values (see scores.continuous.correlation.pearsonr)\n",
     "- $\\alpha$ : Variability ratio (standard deviation of forecasts / standard deviation of observed).\n",
     "- $\\beta$ : Bias ratio (mean of simulated / mean of observed).\n",
     "- $s_\\rho$: Scaling factors for correlation coefficient component ($\\rho$). \n",
