Add quantile interval score (#704)
Add quantile interval score

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -59,7 +59,8 @@
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Flip-Flop Index](./Flip_Flop_Index.ipynb)\n",
     "- [Consistent Scores](./Consistent_Scores.ipynb)\n",
-    "- [Threshold Weighted Scores](./Threshold_Weighted_Scores.ipynb)"
+    "- [Threshold Weighted Scores](./Threshold_Weighted_Scores.ipynb)\n",
+    "- [Quantile Interval Score and Interval Score](./Quantile_Interval_And_Interval_Scores.ipynb)"
    ]
   },
   {
