response to review

--- a/tutorials/CRPS_for_Ensembles.ipynb
+++ b/tutorials/CRPS_for_Ensembles.ipynb
@@ -83,7 +83,9 @@
     "# In this example, each ensemble member is given a name 0 to 9\n",
     "ensemble_forecast = xarray.DataArray(\n",
     "    [1.2, 2.0, 2.7, 2.9, 3.0, 3.0, 3.1, 3.2, 3.8, 5.0],\n",
-    "\tcoords=[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]], dims=[\"ensemble_member\"])\n",
+    "    coords=[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
+    "    dims=[\"ensemble_member\"],\n",
+    ")\n",
     "\n",
     "# The observation is assumed to be 4.5\n",
     "obs_array = xarray.DataArray(4.5)"
@@ -120,13 +122,16 @@
     "# The ensemble forecast can be converted to a CDF\n",
     "# When converted in a naive way we get the empirical CDF illustrated here. The larger the ensemble the smoother and more sensible this will be.\n",
     "# The plot below also shows the CDF corresponding to the observation, and the area corrsponding to the CRPS.\n",
-    "fcst_thresholds = numpy.linspace(0, 7, 700) \n",
-    "empirical_cdf = xarray.DataArray(coords={'temperature': fcst_thresholds}, data=[0]*120 + [0.1]*80 + [0.2]*70 + [0.3]*20 +[0.7]*30 + [0.8]*60 + [0.9]*120 +[1]*200)\n",
-    "observed_cdf = numpy.heaviside(fcst_thresholds-4.5, 1)\n",
+    "fcst_thresholds = numpy.linspace(0, 7, 700)\n",
+    "empirical_cdf = xarray.DataArray(\n",
+    "    coords={\"temperature\": fcst_thresholds},\n",
+    "    data=[0] * 120 + [0.1] * 80 + [0.2] * 70 + [0.3] * 20 + [0.7] * 30 + [0.8] * 60 + [0.9] * 120 + [1] * 200,\n",
+    ")\n",
+    "observed_cdf = numpy.heaviside(fcst_thresholds - 4.5, 1)\n",
     "plt.figure(figsize=(4, 3))\n",
-    "plt.plot(fcst_thresholds, observed_cdf, label='Observation')\n",
-    "plt.plot(fcst_thresholds, empirical_cdf, label='Forecast')\n",
-    "plt.fill_between(fcst_thresholds, empirical_cdf, observed_cdf, color='gray', label='area for CRPS')\n",
+    "plt.plot(fcst_thresholds, observed_cdf, label=\"Observation\")\n",
+    "plt.plot(fcst_thresholds, empirical_cdf, label=\"Forecast\")\n",
+    "plt.fill_between(fcst_thresholds, empirical_cdf, observed_cdf, color=\"gray\", label=\"area for CRPS\")\n",
     "plt.title(\"Empirical CDF based on Ensemble\")\n",
     "plt.xlabel(\"Temperature\")\n",
     "plt.ylabel(\"Probability\")\n",
@@ -520,7 +525,7 @@
    ],
    "source": [
     "# Specifying method='ecdf' assumes the empirical CDF\n",
-    "crps_for_ensemble(ensemble_forecast, obs_array, ensemble_member_dim='ensemble_member', method='ecdf').round(3)"
+    "crps_for_ensemble(ensemble_forecast, obs_array, ensemble_member_dim=\"ensemble_member\", method=\"ecdf\").round(3)"
    ]
   },
   {
@@ -910,7 +915,7 @@
    ],
    "source": [
     "# Specifying method='fair' gives an approximated CRPS assuming that the ensemble values can be interpreted as a random sample from an underlying predictive distribution\n",
-    "crps_for_ensemble(ensemble_forecast, obs_array, ensemble_member_dim='ensemble_member', method='fair').round(3)"
+    "crps_for_ensemble(ensemble_forecast, obs_array, ensemble_member_dim=\"ensemble_member\", method=\"fair\").round(3)"
    ]
   },
   {
@@ -922,7 +927,8 @@
     "\n",
     "* Use crps_for_ensemble with some real forecasts with extra dimensions in space and/or time.   \n",
     "* Read about the 'fair' method in C. Ferro (2014), \"Fair scores for ensemble forecasts\", Q J R Meteorol Soc\n",
-    "        140(683):1917-1923. https://doi.org/10.1002/qj.2270"
+    "        140(683):1917-1923. https://doi.org/10.1002/qj.2270\n",
+    "* Explore our [twCRPS for ensemble forecasts tutorial](./Threshold_Weighted_CRPS_for_Ensembles.ipynb)"
    ]
   },
   {
