tw crps tutorial
* Add threshold-weighted CRPS tutorial

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -83,6 +83,7 @@
     "- [Brier Score](./Brier_Score.ipynb)\n",
     "- [CRPS for forecasts expressed as CDFs](./CRPS_for_CDFs.ipynb)\n",
     "- [CRPS for ensemble forecasts](./CRPS_for_Ensembles.ipynb)\n",
+    "- [twCRPS for ensemble forecasts](./Threshold_Weighted_CRPS_for_Ensembles.ipynb)\n",
     "- [Receiver Operating Characteristic (ROC)](./ROC.ipynb)"
    ]
   },
