addressed comments Oct 2024

--- a/tutorials/First_Data_Fetching.ipynb
+++ b/tutorials/First_Data_Fetching.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "4f72dbcb-b44b-455d-a3f9-59325dab619c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Tutorial One - Data Preparation\n",
     "\n",
@@ -105,9 +111,9 @@
    },
    "outputs": [],
    "source": [
-    "forecast_url = 'https://dapds00.nci.org.au/thredds/fileServer/wr45/ops_aps3/access-g/1/20221120/0000/fc/sfc/temp_scrn.nc'\n",
+    "forecast_url = 'https://thredds.nci.org.au/thredds/fileServer/wr45/ops_aps3/access-g/1/20221120/0000/fc/sfc/temp_scrn.nc'\n",
     "forecast_hash = '7956d95ea3a7edee2a01c989b1f9e089199da5b1924b4c2d4611088713fbcb44'  # Recorded on 13/5/2023\n",
-    "analysis_url = 'https://dapds00.nci.org.au/thredds/fileServer/wr45/ops_aps3/access-g/1/20221124/0000/an/sfc/temp_scrn.nc'\n",
+    "analysis_url = 'https://thredds.nci.org.au/thredds/fileServer/wr45/ops_aps3/access-g/1/20221124/0000/an/sfc/temp_scrn.nc'\n",
     "analysis_hash = '163c5de55e721ad2a76518242120044bedfec805e3397cfb0008435521630042'  # Recorded on 13/5/2023"
    ]
   },
@@ -608,7 +614,13 @@
    "execution_count": 8,
    "id": "6a4e614d-054b-4333-9f86-cc86439824ee",
    "metadata": {
-    "tags": []
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "nbsphinx-thumbnail"
+    ]
    },
    "outputs": [
     {
@@ -3011,7 +3023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
