Updated docs for quantile_interval_score
Updated docs for quantile interval score

Applied review comments

--- a/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quantile Interval and Interval Scores\n",
+    "# Quantile Interval Score and Interval Score\n",
     "\n",
     "The quantile interval and interval scores are consistent scoring functions to evaluate prediction intervals, where the aim is to predict an interval that captures uncertainty at a given confidence level. Quantile interval score can accept any values for the lower and upper quantile levels as long as $0 < \\text{lower quantile level} < \\text{upper quantile level} < 1$ is met, whereas interval score is only for forecast intervals with symmetric quantile level range. For example lower and upper quantile levels of 0.2 and 0.9 can be used by the quantile interval score but not by the interval score.\n",
     "\n",
