updated kge to use include_components

--- a/tutorials/Kling_Gupta_Efficiency.ipynb
+++ b/tutorials/Kling_Gupta_Efficiency.ipynb
@@ -286,8 +286,8 @@
    ],
    "source": [
     "#Let's calculate the KGE of each forecast system\n",
-    "kge1 = kge(fcst1, obs,return_components=True)\n",
-    "kge2 = kge(fcst2, obs,return_components=True)\n",
+    "kge1 = kge(fcst1, obs, include_components=True)\n",
+    "kge2 = kge(fcst2, obs, include_components=True)\n",
     "print(f\"Forecast system 1: KGE = {kge1['kge'].item():.3}, correlation(rho) = {kge1['rho'].item():.3}, variability(alpha) = {kge1['alpha'].item():.3}, bias(beta) = {kge1['beta'].item():.3}\")\n",
     "print(f\"Forecast system 2: KGE = {kge2['kge'].item():.3}, correlation(rho) = {kge2['rho'].item():.3}, variability(alpha) = {kge2['alpha'].item():.3}, bias(beta) = {kge2['beta'].item():.3}\")"
    ]
