--- a/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
@@ -29,7 +29,7 @@
     "- $S$ is the scoring function (here quantile interval score),\n",
     "- $q_l$ the lower quantile forecast,\n",
     "- $q_u$ is the upper quantile forecast,\n",
-    "- $y$ is observation,\n",
+    "- $y$ is the observation,\n",
     "- $\\alpha_l$ is the lower quantile level,\n",
     "- $\\alpha_u$ is the upper quantile level.\n",
     "\n",
