--- a/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "where:\n",
     "- $S$ is the scoring function (here quantile interval score),\n",
-    "- $q_l$ the lower quantile forecast,\n",
+    "- $q_l$ is the lower quantile forecast,\n",
     "- $q_u$ is the upper quantile forecast,\n",
     "- $y$ is the observation,\n",
     "- $\\alpha_l$ is the lower quantile level,\n",
