--- a/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
@@ -561,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As mentioned, we can use either the *quantile interval score* or the *interval score* for Scenario 2 due to the symmetric quantile range of forecast intervals in this scenario. Both scores will yield the same results. Let's verify this now:"
+    "As mentioned, we can use either the quantile interval score or the interval score for Scenario 2 due to the symmetric quantile range of forecast intervals in this scenario. Both scores will yield the same results. Let's verify this now:"
    ]
   },
   {
