--- a/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "**Scenario 1**: There is a 50% chance that the temperature will be between 15 and 20 °C, with a lower quantile of 0.10 (indicating 10% cooler) and an upper quantile of 0.60 (indicating 40% warmer).\n",
     "\n",
-    "**Scenario 2**: There is a 50% chance that the temperature will be between 15 and 20 °C, with a lower quantile of 0.25 (indicating 25% cooler) and an upper quantile of 0.75 (indicating 25% warmer).\n",
+    "**Scenario 2**: There is a 50% chance that the temperature will be between 15 and 20 °C, with a lower quantile of 0.25 (indicating a 25% chance of the temperature being cooler than 15 °C) and an upper quantile of 0.75 (indicating a 25% chance of the temperature being warmer than 20 °C).\n",
     "\n",
     "\n",
     "You might have already guessed why we chose these scenarios. Scenario 1 represents a case where the quantile range is not symmetric, so we can only use the quantile interval score for this scenario. In contrast, Scenario 2 has a symmetric quantile range allowing us to use both the quantile interval score and the interval score, which should yield the same results."
