--- a/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Scores.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "In this example, we generate synthetic observation data and interval forecasts for temperature under two scenarios:\n",
     "\n",
-    "**Scenario 1**: There is a 50% chance that the temperature will be between 15 and 20 °C, with a lower quantile of 0.10 (indicating 10% cooler) and an upper quantile of 0.60 (indicating 40% warmer).\n",
+    "**Scenario 1**: There is a 50% chance that the temperature will be between 15 and 20 °C, with a lower quantile of 0.10 (indicating a 10% chance of the temperature being cooler than 15 °C) and an upper quantile of 0.60 (indicating a 40% chance of the temperature being warmer than 20 °C).\n",
     "\n",
     "**Scenario 2**: There is a 50% chance that the temperature will be between 15 and 20 °C, with a lower quantile of 0.25 (indicating a 25% chance of the temperature being cooler than 15 °C) and an upper quantile of 0.75 (indicating a 25% chance of the temperature being warmer than 20 °C).\n",
     "\n",
