--- a/tutorials/Quantile_Interval_And_Interval_Score.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Score.ipynb
@@ -93,9 +93,9 @@
    "source": [
     "In this example, we generate synthetic observation data and interval forecasts for temperature under two scenarios:\n",
     "\n",
-    "**Scenario 1**: There is a 50% chance that the temperature will be between 15 and 20 °C, with a lower quantile of 0.10 (indicating a 10% chance of the temperature being cooler than 15 °C) and an upper quantile of 0.60 (indicating a 40% chance of the temperature being warmer than 20 °C).\n",
+    "**Scenario 1**: There is a forecast 50% chance that the temperature will be between 15 and 20 °C, with a lower quantile of 0.10 (indicating a 10% chance that the temperature may be cooler than 15 °C) and an upper quantile of 0.60 (indicating a 40% chance that the temperature may be warmer than 20 °C).\n",
     "\n",
-    "**Scenario 2**: There is a 50% chance that the temperature will be between 15 and 20 °C, with a lower quantile of 0.25 (indicating a 25% chance of the temperature being cooler than 15 °C) and an upper quantile of 0.75 (indicating a 25% chance of the temperature being warmer than 20 °C).\n",
+    "**Scenario 2**: There is a forecast 50% chance that the temperature may be between 15 and 20 °C, with a lower quantile of 0.25 (indicating a 25% chance that the temperature may be cooler than 15 °C) and an upper quantile of 0.75 (indicating a 25% chance that the temperature may be warmer than 20 °C).\n",
     "\n",
     "\n",
     "You might have already guessed why we chose these scenarios. Scenario 1 represents a case where the quantile range is not symmetric, so we can only use the quantile interval score for this scenario. In contrast, Scenario 2 has a symmetric quantile range allowing us to use both the quantile interval score and the interval score, which should yield the same results."
