Correction to underforecast penalty term in mathjax in tutorial and API docs Grammar tweaks to API docstring

--- a/tutorials/Quantile_Interval_And_Interval_Score.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Score.ipynb
@@ -19,7 +19,7 @@
     "\\end{cases} $$\n",
     "- **Under-Prediction Penalty:**\n",
     "$$ U = \\begin{cases} \n",
-    "\\frac{1}{1 - \\alpha_u} \\cdot (q_{u} - y) & \\text{if } y > q_{u} \\\\\n",
+    "\\frac{1}{1 - \\alpha_u} \\cdot (y - q_{u}) & \\text{if } y > q_{u} \\\\\n",
     "0 & \\text{otherwise}\n",
     "\\end{cases} $$\n",
     "**So, the total score can be written as:**\n",
@@ -45,7 +45,7 @@
     "\\end{cases} $$\n",
     "- **Under-Prediction Penalty:**\n",
     "$$ U = \\begin{cases} \n",
-    "\\frac{2}{\\alpha} \\cdot (q_{u} - y) & \\text{if } y > q_{u} \\\\\n",
+    "\\frac{2}{\\alpha} \\cdot (y - q_{u}) & \\text{if } y > q_{u} \\\\\n",
     "0 & \\text{otherwise}\n",
     "\\end{cases} $$\n",
     "\n",
