Update section reference in interval score API and tutorial

--- a/tutorials/Quantile_Interval_And_Interval_Score.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Score.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "To learn more about quantile interval and interval scores please see the following article:\n",
     "\n",
-    "- Gneiting, T., & Raftery, A. E. (2007). Strictly proper scoring rules, prediction, and estimation. Journal of the American Statistical Association, 102(477), 359-378. Corollary 5.2. [https://doi.org/10.1198/016214506000001437](https://doi.org/10.1198/016214506000001437)\n",
+    "- Gneiting, T., & Raftery, A. E. (2007). Strictly proper scoring rules, prediction, and estimation. Journal of the American Statistical Association, 102(477), 359-378. Section 6.2. [https://doi.org/10.1198/016214506000001437](https://doi.org/10.1198/016214506000001437)\n",
     "\n",
     "Now let's look at an example where we demonstrate how to use the quantile interval and interval scores:"
    ]
