--- a/tutorials/Quantile_Interval_And_Interval_Score.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Score.ipynb
@@ -51,8 +51,9 @@
     "\n",
     "where $\\alpha = 1 - \\text{interval range}$. For example, for a forecast with 0.5 interval range (i.e., 50% confidence level), $\\alpha$ is 0.5, and considering the symmetric quantile range condition, the lower and upper quantile levels would be $\\frac{\\alpha}{2} = 0.25$ and $1 - \\frac{\\alpha}{2} = 0.75$, respectively.\n",
     "\n",
-    "To learn more about quantile interval and interval scores please see the following article:\n",
+    "To learn more about quantile interval and interval scores please see the following articles:\n",
     "\n",
+    "- Winkler, R. L. (1972). A Decision-Theoretic Approach to Interval Estimation. Journal of the American Statistical Association, 67(337), 187. https://doi.org/10.2307/2284720\n",
     "- Gneiting, T., & Raftery, A. E. (2007). Strictly proper scoring rules, prediction, and estimation. Journal of the American Statistical Association, 102(477), 359-378. Section 6.2. [https://doi.org/10.1198/016214506000001437](https://doi.org/10.1198/016214506000001437)\n",
     "\n",
     "Now let's look at an example where we demonstrate how to use the quantile interval and interval scores:"
