Correction to underforecast penalty term in mathjax (#738)
* Correction to underforecast penalty term in mathjax in tutorial and API docs
* Grammar tweaks to API docstring

--- a/tutorials/Quantile_Interval_And_Interval_Score.ipynb
+++ b/tutorials/Quantile_Interval_And_Interval_Score.ipynb
@@ -19,7 +19,7 @@
     "\\end{cases} $$\n",
     "- **Under-Prediction Penalty:**\n",
     "$$ U = \\begin{cases} \n",
-    "\\frac{1}{1 - \\alpha_u} \\cdot (q_{u} - y) & \\text{if } y > q_{u} \\\\\n",
+    "\\frac{1}{1 - \\alpha_u} \\cdot (y - q_{u}) & \\text{if } y > q_{u} \\\\\n",
     "0 & \\text{otherwise}\n",
     "\\end{cases} $$\n",
     "**So, the total score can be written as:**\n",
@@ -45,15 +45,16 @@
     "\\end{cases} $$\n",
     "- **Under-Prediction Penalty:**\n",
     "$$ U = \\begin{cases} \n",
-    "\\frac{2}{\\alpha} \\cdot (q_{u} - y) & \\text{if } y > q_{u} \\\\\n",
+    "\\frac{2}{\\alpha} \\cdot (y - q_{u}) & \\text{if } y > q_{u} \\\\\n",
     "0 & \\text{otherwise}\n",
     "\\end{cases} $$\n",
     "\n",
     "where $\\alpha = 1 - \\text{interval range}$. For example, for a forecast with 0.5 interval range (i.e., 50% confidence level), $\\alpha$ is 0.5, and considering the symmetric quantile range condition, the lower and upper quantile levels would be $\\frac{\\alpha}{2} = 0.25$ and $1 - \\frac{\\alpha}{2} = 0.75$, respectively.\n",
     "\n",
-    "To learn more about quantile interval and interval scores please see the following article:\n",
+    "To learn more about quantile interval and interval scores please see the following articles:\n",
     "\n",
-    "- Gneiting, T., & Raftery, A. E. (2007). Strictly proper scoring rules, prediction, and estimation. Journal of the American Statistical Association, 102(477), 359-378. Corollary 5.2. [https://doi.org/10.1198/016214506000001437](https://doi.org/10.1198/016214506000001437)\n",
+    "- Winkler, R. L. (1972). A Decision-Theoretic Approach to Interval Estimation. Journal of the American Statistical Association, 67(337), 187. https://doi.org/10.2307/2284720\n",
+    "- Gneiting, T., & Raftery, A. E. (2007). Strictly proper scoring rules, prediction, and estimation. Journal of the American Statistical Association, 102(477), 359-378. Section 6.2. [https://doi.org/10.1198/016214506000001437](https://doi.org/10.1198/016214506000001437)\n",
     "\n",
     "Now let's look at an example where we demonstrate how to use the quantile interval and interval scores:"
    ]
