Update thumbnail for categorical scores tutorial

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -105,7 +105,7 @@
    },
    "source": [
     "- [FIRM](./FIRM.ipynb)\n",
-    "- [Binary Categorical Scores](./Binary_Contingency_Scores.ipynb)"
+    "- [Binary (Contingency/Categorical/Confusion Matrix) Scores](./Binary_Contingency_Scores.ipynb)"
    ]
   },
   {
