Update first level header in binary categorical scores tutorial (#743)
* Update first level header in binary categorical scores tutorial

* Add "binary" before "contingency table" in first level header

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -17,7 +17,7 @@
    "id": "7e3b4f1c-7e82-4b29-9353-3c52eae9fa1e",
    "metadata": {},
    "source": [
-    "# Scores for Binary Categorical Forecasts\n",
+    "# Binary Categorical Scores and Binary Contingency Tables (Confusion Matrices)\n",
     "\n",
     "Examples of binary categorical scores include: hit rate (true positive rate), false alarm rate and accuracy.\n",
     "\n",
