--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -170,6 +170,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ae976a7",
+   "metadata": {},
+   "source": [
+    "## Emerging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef3d627a",
+   "metadata": {},
+   "source": [
+    "- [Risk Matrix Score](./Risk_Matrix_Score.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3af91021-80ab-4d0c-bc81-b13f5e039ec0",
    "metadata": {},
    "source": [
