Update to API docstring for Brier Score using DOI Update to tutorial for Brier Score using DOI

--- a/tutorials/Brier_Score.ipynb
+++ b/tutorials/Brier_Score.ipynb
@@ -96,8 +96,15 @@
     "- In the future, the Brier score components calculation will be added.\n",
     "- You may be interested in working through the Murphy Diagram tutorial which allows you to break down the performance of the Brier score based on each threshold probability.\n",
     "\n",
-    "**Reference**: [Brier, G.W., 1950. Verification of forecasts expressed in terms of probability. Monthly weather review, 78(1), pp.1-3.](https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=feee6551179612b9691f021b583d8a99b81b9b86)"
+    "**Reference**: Brier, G. W. (1950). Verification of forecasts expressed in terms of probability. Monthly weather review, 78(1), 1-3. [https://doi.org/fp62r6](https://doi.org/fp62r6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -116,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
