update tutorial doc

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -39,7 +39,8 @@
     "   - hit rate (true positive rate, probability of detection, sensitivity, recall)\n",
     "   - false alarm ratio\n",
     "   - false alarm rate (probability of false detection) - not to be confused with false alarm ratio\n",
-    "   - success ratio (precision)\n",
+    "   - success ratio (precision, positive predictive value)\n",
+    "   - negative predictive value \n",
     "   - threat score (critical success index)\n",
     "   - the Peirce skill score (true skill statistic, Hanssen and Kuipers discriminant)\n",
     "   - specificity (true negative rate)\n",
