all of the 'chainging_func_kwargs' are changed to 'chaining_func_kwargs' Jupyter notebook rerun everything to reflect the changes on method name

--- a/tutorials/Kling_Gupta_Efficiency.ipynb
+++ b/tutorials/Kling_Gupta_Efficiency.ipynb
@@ -60,6 +60,7 @@
     "from scores.continuous import kge\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -224,6 +225,9 @@
    ],
    "source": [
     "# Let's view a time series of both forecasts and observations for a single point\n",
+    "import math\n",
+    "\n",
+    "\n",
     "fig,axs = plt.subplots(2,2,figsize=(10,6))\n",
     "obs.sel(x=0).drop_vars([\"x\"]).plot(ax=axs[0,0],label='Observation')\n",
     "fcst1.sel(x=0).drop_vars([\"x\"]).plot(ax=axs[0,0],label='Forecast 1')\n",
@@ -250,10 +254,13 @@
     "corr1 = pearsonr(fcst1, obs).item()\n",
     "corr2 = pearsonr(fcst2, obs).item()\n",
     "\n",
-    "axs[0,0].set_title(f\"Forecast 1 (Perfectly correlated)\\nmultiplicative bias = {bias1:.3}, correlation:  {corr1:.2f}\")\n",
-    "axs[0,1].set_title(f\"Forecast 2 (Poorly correlated)\\nmultiplicative bias= {bias2:.3}, correlation:  {corr2:.2f}\");\n",
+    "if math.isnan(corr1) or math.isnan(corr2):\n",
+    "    warnings.warn(\"Warning! The returned value from corr1 or corr2 is NaN\\n\")\n",
+    "else:\n",
+    "    axs[0,0].set_title(f\"Forecast 1 (Perfectly correlated)\\nmultiplicative bias = {bias1:.3}, correlation:  {corr1:.2f}\")\n",
+    "    axs[0,1].set_title(f\"Forecast 2 (Poorly correlated)\\nmultiplicative bias= {bias2:.3}, correlation:  {corr2:.2f}\");\n",
     "\n",
-    "plt.show()"
+    "    plt.show()"
    ]
   },
   {
